# 5kaWareHouse

./: .env  my_base.db  pyproject.toml
scripts/: start_bot.sh
src/5ka_warehouse/: config.py  main.py
src/5ka_warehouse/core/: dispatcher.py
src/5ka_warehouse/database/: models.py  orm_query.py
src/5ka_warehouse/handlers/common/: start.py
src/5ka_warehouse/kbds/: inline.py
src/5ka_warehouse/middlewares/: db.py
src/5ka_warehouse/utils/: gen_art.py
